# nio-llm

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  flake.nix  pyproject.toml
nio-llm/: client.py  test.py
nio_llm/: client.py  main.py
src/nio_llm/: Dockerfile  __main__.py  client.py
src/nio_llm_server/: Dockerfile  run.sh
