[tool.poetry]
authors = ["Laurent Fainsin <laurent@fainsin.bzh>"]
description = "You own little LLM in your matrix chatroom"
homepage = "https://github.com/Laurent2916/nio-llm"
license = "MIT"
name = "nio-llm"
readme = "README.md"
repository = "https://github.com/Laurent2916/nio-llm.git"
version = "0.1.0"

[tool.poetry.scripts]
nio-llm = "nio_llm.main:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
huggingface-hub = "^0.14.1"
llama-cpp-python = "^0.1.50"
matrix-nio = "^0.20.2"
rich = "^13.3.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.267"

[tool.ruff]
line-length = 120
ignore = [
  "G004", # Logging statement uses f-string
]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C90", # mccabe
  "COM", # flake8-commas
  "D",   # pydocstyle
  "EM",  # flake8-errmsg
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "G",   # flake8-logging-format
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # ruff
  "S",   # flake8-bandit
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
include = '\.pyi?$'
target-version = ["py311"]
line-length = 120
exclude = '''
/(
  \.git
  \.venv
)/
'''

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
